# PyScreenReader

./: .bazelproject  .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE.bazel  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci.yml  comment_bot.yml  lint_py.yml  publish.yml  release.yml  update_python_version.sh  update_release_version.sh  validate-cross-platform-isolation.yml
doc/: requirements-dev.txt
doc/source/: conf.py  index.rst  quickstart.md
doc/source/_static/: custom.css
doc/source/contributing/: documentation.md  index.rst  release.md
doc/source/reference/: index.rst
doc/source/reference/screen_reader/: index.rst  screen_reader.rst
doc/source/reference/screenreader/: screen_reader.md
doc/source/reference/virtual_widgets/: index.rst  numeric_value_widget.rst  orientation.rst  virtual_button_widget.rst  virtual_group_widget.rst  virtual_menu_item_widget.rst  virtual_menu_widget.rst  virtual_progress_bar_widget.rst  virtual_scrollbar_widget.rst  virtual_slider_widget.rst  virtual_spinner_widget.rst  virtual_text_input_widget.rst  virtual_text_widget.rst  virtual_unknown_widget.rst  virtual_widget.rst  virtual_window_widget.rst
doc/source/reference/virtualwidgets/: numeric_value_widget.md  virtual_button_widget.md  virtual_group_widget.md  virtual_menu_item_widget.md  virtual_menu_widget.md  virtual_progress_bar_widget.md  virtual_scrollbar_widget.md  virtual_slider_widget.md  virtual_spinner_widget.md  virtual_text_input_widget.md  virtual_text_widget.md  virtual_unknown_widget.md  virtual_widget.md  virtual_window_widget.md
include/: bindings_registry.h
include/api/: BUILD  screen_reader.h
include/native/macos/: screen_reader_impl.h  vwidget_generator.h
include/native/macos/utils/: attribute_utils.h  system_utils.h
include/native/win/: screen_reader_impl.h  screen_reader_impl_win.h  vwidget_generator.h  vwidget_generator_win.h
include/vwidget/: BUILD  numeric_value_widget.h  orientation.h  virtual_container_widget.h  virtual_widget.h
include/vwidget/widgets/: BUILD  virtual_button_widget.h  virtual_group_widget.h  virtual_menu_group_widget.h  virtual_menu_item_widget.h  virtual_menu_widget.h  virtual_progress_bar_widget.h  virtual_root_widget.h  virtual_scrollbar_widget.h  virtual_slider_widget.h  virtual_spinner_widget.h  virtual_text_field_widget.h  virtual_text_input_widget.h  virtual_text_widget.h  virtual_unknown_widget.h  virtual_window_widget.h
src/: BUILD  bindings.cpp  bindings_registry.cpp  bindings_registry.h  main.cpp
src/api/: BUILD  screen_reader.cpp
src/base/: BUILD  build_flags.h  types.h
src/native/linux/: BUILD  screen_reader_impl_linux.cpp  screen_reader_impl_linux.h  vwidget_factory_linux.cpp  vwidget_factory_linux.h  vwidget_generator.cpp  vwidget_generator.h  vwidget_generator_linux.cpp  vwidget_generator_linux.h  widget_factory_linux.cpp  widget_factory_linux.h
src/native/linux/utils/: BUILD  atspi_utils.cpp  atspi_utils.h
src/native/macos/: BUILD  screen_reader_impl.cpp  screen_reader_impl_mac.cpp  screen_reader_impl_mac.h  vwidget_factory.cpp  vwidget_factory.h  vwidget_factory_mac.cpp  vwidget_factory_mac.h  vwidget_generator.cpp  vwidget_generator.h  vwidget_generator_mac.cpp  vwidget_generator_mac.h
src/native/macos/utils/: BUILD  attribute_utils.cpp  attribute_utils.h  cf_utils.cpp  cf_utils.h  system_utils.cpp  system_utils.h
src/native/win/: BUILD  screen_reader_impl.cpp  screen_reader_impl_win.cpp  screen_reader_impl_win.h  vwidget_factory_win.cpp  vwidget_factory_win.h  vwidget_generator.cpp  vwidget_generator_win.cpp  vwidget_generator_win.h
src/native/win/gtest/: BUILD  test_screen_reader.cpp
src/native/win/utils/: BUILD  pattern_data.cpp  pattern_data.h  system_utils.cpp  system_utils.h
src/stubs/: BUILD  __init__.pyi  screen_reader.pyi  virtual_widgets.pyi
src/vwidget/: BUILD  numeric_value_widget.cpp  virtual_container_widget.cpp  virtual_widget.cpp
src/vwidget/widgets/: BUILD  virtual_button_widget.cpp  virtual_group_widget.cpp  virtual_menu_group_widget.cpp  virtual_menu_item_widget.cpp  virtual_menu_widget.cpp  virtual_progress_bar_widget.cpp  virtual_root_widget.cpp  virtual_scroll_bar_widget.cpp  virtual_scrollbar_widget.cpp  virtual_slider_widget.cpp  virtual_spinner_widget.cpp  virtual_text_field_widget.cpp  virtual_text_input_widget.cpp  virtual_text_widget.cpp  virtual_unknown_widget.cpp  virtual_window_widget.cpp
tests/: BUILD  test.py
tests/cpp/native/linux/: BUILD  test_screen_reader_impl_linux.cpp
tests/cpp/native/macos/: BUILD  test_screen_reader_impl_mac.cpp
tests/cpp/native/win/: BUILD  test_screen_reader_impl_win.cpp
tests/cpp/tools/: gtest_defs.bzl
tests/e2e_cases/: BUILD  basic_widgets_case.py  e2e_case_helpers.py  e2e_test_case_wrapper.py
tests/gtest/: BUILD  test_screen_reader.cpp
tests/py/: BUILD  requirements.in  requirements_lock.txt  requirements_lock_win.txt  requirements_win_lock.txt  test_screen_reader.py  test_utils.py  test_virtual_button_widget.py
tests/py/benchmarks/: BUILD  test_widget_performance.py
tests/py/e2e/: BUILD  test_basic_widgets.py
tests/py/tools/: BUILD  constants.py  e2e_test_case_process.py  pytest_defs.bzl  pytest_wrapper.py  test_utils.py  utils.py
tests/py/vwidget/: BUILD  test_numeric_value_widget.py  test_virtual_widget.py
tests/py/vwidget/widgets/: test_virtual_button_widget.py  (+11 more)
tests/py/vwidgets/: BUILD  test_inheritance.py  test_numeric_value_widget.py  test_virtual_button_widget.py  test_virtual_container.py  test_virtual_unknown_widget.py  test_virtual_widget.py
toolchains/: BUILD
tools/: BUILD  cpp_inspect.cpp  download_wheels.py  generate_doc.py  generate_rst.py  lint_cpp.py  lint_py.py  py_inspect.py  requirements.in  requirements_lock.txt  tools_helper.py
(+14 files in other folders)
