###############################################################################
#Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
python_version_string = "3.13"

module(
    name = "py_screen_reader",
    version = "head",
    repo_name = "PyScreenReader",
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "cxxopts", version = "3.0.0", dev_dependency = True)

# hedron_compile_commands is used to build compilation database for linters
# run `bazel run @hedron_compile_commands//:refresh_all`
# TODO (Issue #15): also write this to a separate documentation
bazel_dep(name = "hedron_compile_commands", version = "1.0.5", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# TODO: pin the version of bazel_pkg_config
bazel_dep(name = "bazel_pkg_config", version = "master")
archive_override(
    module_name = "bazel_pkg_config",
    sha256 = "d345697f54112c94cac3371903bfcb4dc868bdb5912516879e1009896687ccd1",
    strip_prefix = "bazel_pkg_config-master",
    url = "https://github.com/Lmh-java/bazel_pkg_config/archive/refs/heads/master.zip",
)

# Linux specific depedencies
pkg_config_extension = use_extension("@bazel_pkg_config//:pkg_config.bzl", "pkg_config_extension")
pkg_config_extension.package(
    name = "glib",
    pkg_name = "glib-2.0",
    skip_platforms = ["windows", "macos"],
)
pkg_config_extension.package(
    name = "atspi",
    pkg_name = "atspi-2",
    skip_platforms = ["windows", "macos"],
)

use_repo(pkg_config_extension, "glib")
use_repo(pkg_config_extension, "atspi")

# Pybind 11 Configurations
pybind11_configure = use_extension("@pybind11_bazel//:internal_configure.bzl", "internal_configure_extension")
use_repo(pybind11_configure, "pybind11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = python_version_string,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Python test environment
pip.parse(
    hub_name = "pytest_env",
    python_version = python_version_string,
    requirements_lock = "//tests/py:requirements_lock.txt",
    requirements_windows = "//tests/py:requirements_lock_win.txt",
)

# Python Dev tools environment
pip.parse(
    hub_name = "dev_tools_env",
    python_version = python_version_string,
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "dev_tools_env", "pytest_env")

