#load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
#load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
#load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

#http_archive(
#    name = "rules_foreign_cc",
#    sha256 = "33a5690733c5cc2ede39cb62ebf89e751f2448e27f20c8b2fbbc7d136b166804",
#    strip_prefix = "rules_foreign_cc-0.5.1",
#    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.5.1.tar.gz",
#)
#
#load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

#http_archive(
#    name = "rules_python",
#    sha256 = "3b8b4cdc991bc9def8833d118e4c850f1b7498b3d65d5698eea92c3528b8cf2c",
#    strip_prefix = "rules_python-0.30.0",
#    url = "https://github.com/bazelbuild/rules_python/releases/download/0.30.0/rules_python-0.30.0.tar.gz",
#)
#
#load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")
#
#py_repositories()

#http_archive(
#  name = "pybind11_bazel",
#  strip_prefix = "pybind11_bazel-34206c29f891dbd5f6f5face7b91664c2ff7185c",
#  urls = ["https://github.com/pybind/pybind11_bazel/archive/34206c29f891dbd5f6f5face7b91664c2ff7185c.zip"],
#  sha256 = "8d0b776ea5b67891f8585989d54aa34869fc12f14bf33f1dc7459458dd222e95",
#)
#
#http_archive(
#  name = "pybind11",
#  build_file = "@pybind11_bazel//:pybind11.BUILD",
#  strip_prefix = "pybind11-a54eab92d265337996b8e4b4149d9176c2d428a6",
#  urls = ["https://github.com/pybind/pybind11/archive/a54eab92d265337996b8e4b4149d9176c2d428a6.tar.gz"],
#  sha256 = "c9375b7453bef1ba0106849c83881e6b6882d892c9fae5b2572a2192100ffb8a",
#)
#
#load("@pybind11_bazel//:python_configure.bzl", "python_configure")
#python_configure(name = "local_config_python")

#http_archive(
#    name = "gtest",
#    sha256 = "927827c183d01734cc5cfef85e0ff3f5a92ffe6188e0d18e909c5efebf28a0c7",
#    strip_prefix = "googletest-release-1.8.1",
#    url = "https://github.com/google/googletest/archive/release-1.8.1.zip",
#)

# Python pip deps
#load("@rules_python//python:pip.bzl", "pip_parse")
#
#pip_parse(
#    name = "pytest_deps",
#    requirements_lock = "//tests/py:requirements_lock.txt",
#)
#
#load("@pytest_deps//:requirements.bzl", pytest_deps_install_deps = "install_deps")
#pytest_deps_install_deps()

