[metadata]
name = PyScreenReader
version = 0.0.1
author = Minghao Li
author_email = mli131@student.ubc.ca
description = PyScreenReader is a cross-platform Python library that wraps native accessibility APIs to collect widget tree information on the screen.
; long_description = file: README.md
; long_description_content_type = text/markdown

[options]
python_requires = >=3.7
zip_safe = False

[options.extras_require]
test = pytest>=6.0